html renomé ajout du <title> et de <meta description>

--- a/lapantheredesign.html
+++ b/lapantheredesign.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="description" content="La Panthère design,
+	 créateur de design obtimale pour vos site web. 
+	 Donnez vie à vos sites web en les rendant plus visible 
+	 et attractif que jamais. Avec l'aide de nos designers certifier 
+	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="./img/logo.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -19,7 +23,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La Panthère design: donnez vie a vos site</title>
 
     
 <!-- Analytics -->
