--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	 et attractif que jamais. Avec l'aide de nos designers certifier 
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="./img/logo.png">
+    <link rel="shortcut icon" type="image/png" href="./favicon copie.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
