--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="agence web design, créateur de site web, trouver un bon web design,agence de web design Lyon, créer un site internet ">
     <meta name="description" content="La Panthère design,
 	 créateur de design obtimale pour vos site web. 
 	 Donnez vie à vos sites web en les rendant plus visible 
