--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	 et attractif que jamais. Avec l'aide de nos designers certifier 
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="./favicon copie.avif">
+    <link rel="shortcut icon" type="image/png" href="./favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -76,7 +76,7 @@
 					Agence La Panthère
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a class=button-contact href="page2.html">Contact</a>
 				</div>
 			</div>
 		</div>
