ajout de meta robots

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	 et attractif que jamais. Avec l'aide de nos designers certifier 
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<code><meta name="robots" content="index, follow"></code>
     <link rel="shortcut icon" type="image/png" href="./favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -299,10 +300,11 @@
 
 </div>
 <!-- Principal conteneur END -->
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
-<script src="./js/jquery.touchSwipe.js"></script>
-<script src="./js/gmaps.js"></script>
 </body>
+<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/formHandler.js"></script>
+    <title>page2</title>
 </html>
