ajout du title a la page 2

--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
 	<script src="./js/formHandler.js" defer></script>
     
 	
-	<title>page2</title>
+	<title>La Panthère design: nous contacter</title>
     
 <!-- Analytics -->
  
