--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
+				<!--
 				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				-->
+				<h2>
+					L'agence La Panthère est une agence de web design qui aide</br>
+					les entreprises à devenir attractives et visibles sur Internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -158,7 +164,13 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
+				<!--
 				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				-->
+				<h2>
+					Nous travaillonsavec beaucoup de clients,</br>
+					voici nos réalisations.
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
