correction des erreur du validator html de page2.html manque <form>

--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="agence web design, créateur de site web, trouver un bon web design,agence de web design Lyon, créer un site internet ">
@@ -9,7 +9,7 @@
 	 et attractif que jamais. Avec l'aide de nos designers certifier 
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="./favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
