--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<!--
+	
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.min.js" defer></script>
 	<script src="./js/jqBootstrapValidation.js" defer></script>
 	<script src="./js/formHandler.js" defer></script>
-	-->
-    <title>La Panthère design: donnez vie a vos site</title>
+	
+    <title>Agence La Panthère : donnez vie a vos site</title>
 
     
 <!-- Analytics -->
