--- a/page2.html
+++ b/page2.html
@@ -16,15 +16,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<!--
+	
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.min.js" defer></script>
 	<script src="./js/jqBootstrapValidation.js" defer></script>
 	<script src="./js/formHandler.js" defer></script>
-    -->
+    
 	
-	<title>La Panthère design: nous contacter</title>
+	<title>Agence La Panthère: Page Contact</title>
     
 <!-- Analytics -->
  
