Maj (JS en fin de html)

--- a/index.html
+++ b/index.html
@@ -280,4 +280,9 @@
 <!-- Footer - bloc-8 END -->
 <!-- Principal conteneur END -->
 </body>
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer></script>
+	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js" defer></script>
+	<script src="./js/formHandler.js" defer></script>
 </html>
