correction des erreurs pour (formhandler.js) & (jqBootstrapValidation.js)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</li>
 				-->
 					<li>
-						<a href="page2.html"> Nous Contacter</a>
+						<a href="page2.html"> Nous Contacter </a>
 					</li>
 				</ul>
 			</div>
@@ -287,10 +287,15 @@
 </div>
 <!-- Footer - bloc-8 END -->
 <!-- Principal conteneur END -->
+
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jqBootstrapValidation.js"></script>
+	<script defer src="./js/formHandler.js"></script>
+<!--
+	
+-->
+
 </body>
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
 </html>
