--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,11 @@
 	<script src="./js/jqBootstrapValidation.js" defer></script>
 	<script src="./js/formHandler.js" defer></script>
     -->
+	<script src="./js/jquery-2.1.0.js"></script>
+ <script src="./js/bootstrap.js"></script>
+ <script src="./js/blocs.js"></script>
+ <script src="./js/jquery.touchSwipe.js" defer></script>
+ <script src="./js/gmaps.js"></script>
 	
 	<title>Agence La Panthère: Page Contact</title>
     
@@ -120,12 +125,7 @@
 </div>
 <!-- bloc-7 END -->
 
-		<!-----------------À SUPRIMER--------------->
-<!-- ScrollToTop Button -->
-<!--
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
--->
-<!-- ScrollToTop Button END-->
+
 
 
 <!-- Footer - bloc-8 -->
@@ -166,12 +166,8 @@
 
 </div>
 <!-- Principal conteneur END -->
-    
+ </body>   
+ 
 
-</body>
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
+
 </html>
