--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<!--
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
-	-->
+	
+	<script defer src="./js/jquery-2.1.0.js"></script>
+ 	<script defer src="./js/bootstrap.js"></script>
+ 	<script defer src="./js/blocs.js"></script>
+ 	<script defer src="./js/jquery.touchSwipe.js"></script>
+ 	<script defer src="./js/gmaps.js"></script>
+	
     <title>Agence La Panthère : donnez vie a vos site</title>
 
     
@@ -49,13 +49,6 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				
 				<ul class="site-navigation nav navbar-nav">
-					<!--
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
-					<li>
-					</li>
-				-->
 					<li>
 						<a href="page2.html"> Nous Contacter </a>
 					</li>
@@ -288,11 +281,7 @@
 <!-- Footer - bloc-8 END -->
 <!-- Principal conteneur END -->
 
-	<script defer src="./js/jquery-2.1.0.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jqBootstrapValidation.js"></script>
-	<script defer src="./js/formHandler.js"></script>
+
 <!--
 	
 -->
