--- a/page2.html
+++ b/page2.html
@@ -17,18 +17,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-	<!--
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
-    -->
-	<script src="./js/jquery-2.1.0.js"></script>
- <script src="./js/bootstrap.js"></script>
- <script src="./js/blocs.js"></script>
- <script src="./js/jquery.touchSwipe.js" defer></script>
- <script src="./js/gmaps.js"></script>
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/jqBootstrapValidation.js"></script>
+	<script defer src="./js/formHandler.js"></script>
 	
 	<title>Agence La Panthère: Page Contact</title>
     
@@ -166,8 +159,6 @@
 
 </div>
 <!-- Principal conteneur END -->
- </body>   
- 
 
-
+</body>   
 </html>
