ajout de (aria-label=) sur les link RS

--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
 	<script defer src="./js/jquery-3.6.0.min.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/bootstrap-new.js"></script>
 	<script defer src="./js/blocs.js"></script>
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
@@ -132,22 +132,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="notre page twitter" ><i class="fa fa-twitter icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="notre page facebook"><i class="fa fa-facebook icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com/" aria-label="notre page dribbble"><i class="fa fa-dribbble icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="notre page instagram"><i class="fa fa-instagram icon-md"></i></a>
 						</div>
 					</div>
 				</div>
