--- a/index.html
+++ b/index.html
@@ -247,22 +247,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/?lang=fr" ><i class="fa fa-twitter icon-md"></i></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="notre page twitter" ><i class="fa fa-twitter icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/"><i class="fa fa-facebook icon-md"></i></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="notre page facebook"><i class="fa fa-facebook icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><i class="fa fa-dribbble icon-md"></i></a>
+							<a class="social" href="https://dribbble.com/" aria-label="notre page dribbble"><i class="fa fa-dribbble icon-md"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/?hl=fr"><i class="fa fa-instagram icon-md"></i></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="notre page instagram"><i class="fa fa-instagram icon-md"></i></a>
 						</div>
 					</div>
 				</div>
