--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
 	<script defer src="./js/jquery-3.6.0.min.js"></script>
- 	<script defer src="./js/bootstrap-new.js"></script>
+ 	<script defer src="./js/bootstrap.min.js"></script>
  	<script defer src="./js/blocs.js"></script>
  	<script defer src="./js/jquery.touchSwipe.js"></script>
  	<script defer src="./js/gmaps.js"></script>
