--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
+	<meta name="google-site-verification" content="q6g4poLLLm1q5MQJ6_w9ND22bgqftFT6vHVD3mwJpmc" />
     <link rel="shortcut icon" type="image/png" href="./favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -18,7 +19,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
 	<script defer src="./js/jquery-3.6.0.min.js"></script>
- 	<script defer src="./js/bootstrap.min.js"></script>
+	<!---->
+ 	<script defer src="./js/bootstrap-new.js"></script>
+	 
+	
  	<script defer src="./js/blocs.js"></script>
  	<script defer src="./js/jquery.touchSwipe.js"></script>
  	<script defer src="./js/gmaps.js"></script>
