--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence web design à Lyon, stratégie web, web design, illustrations, créateur de site web, trouver un bon web designer, créer un site internet ">
+    <meta name="keywords" content="agence web design à Lyon, stratégie, web design, illustrations, créateur de site web, trouver un bon web designer, créer un site internet ">
     <meta name="description" content="La Panthère design,
 	 créateur de design obtimale pour vos site web. 
 	 Donnez vie à vos sites web en les rendant plus visible 
@@ -17,17 +17,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
-	<script defer src="./js/jquery-3.6.0.min.js"></script>
 	<!---->
+	<script defer src="./js/jquery-3.6.0.min.js"></script>
  	<script defer src="./js/bootstrap-new.js"></script>
-	 
-	
  	<script defer src="./js/blocs.js"></script>
  	<script defer src="./js/jquery.touchSwipe.js"></script>
  	<script defer src="./js/gmaps.js"></script>
 	
-    <title>Agence La Panthère : donnez vie a vos site</title>
+    <title>Donnez vie a vos site web, avec des design qui vous ressemble grace à "La Panthère design"</title>
 
     
 <!-- Analytics -->
@@ -275,6 +272,7 @@
 	</div>
 </div>
 <!-- Footer - bloc-8 END -->
+</div>
 <!-- Principal conteneur END -->
 
 
