--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence web design, créateur de site web, trouver un bon web design,agence de web design Lyon, créer un site internet ">
+    <meta name="keywords" content="agence la Panthère, créateur de site web, devenir attractives et visible sur internet, agence de web design Lyon, créer un site internet ">
     <meta name="description" content="La Panthère design,
 	 créateur de design obtimale pour vos site web. 
 	 Donnez vie à vos sites web en les rendant plus visible 
@@ -23,7 +23,7 @@
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
 	
-	<title>Agence La Panthère: Page Contact</title>
+	<title>La Panthère Agence: Page Contact</title>
     
 <!-- Analytics -->
  
