Maj img format (webp)

--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence la Panthère, créateur de site web, devenir attractives et visible sur internet, agence de web design Lyon, créer un site internet ">
+    <meta name="keywords" content="agence la Panthère, créateur de site web, devenir attractif et visible sur internet, agence de web design Lyon, créer un site internet ">
     <meta name="description" content="La Panthère design,
 	 créateur de design obtimale pour vos site web. 
 	 Donnez vie à vos sites web en les rendant plus visible 
@@ -10,7 +10,7 @@
 	 insuflé l'essence meme de votre entreprise a vos site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="./favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="./favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
