--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 				
 				<ul class="site-navigation nav navbar-nav">
 					<li>
+						<a href="index.html">Accueil</a>
+					</li>
+					<li>
 						<a href="page2.html"> Nous Contacter </a>
 					</li>
 				</ul>
