--- a/page2.html
+++ b/page2.html
@@ -49,6 +49,9 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
+					<li>
+						<a href="page2.html"> Nous Contacter </a>
+					</li>
 				</ul>
 			</div>
 		</nav>
