bootstrap.css minify

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="google-site-verification" content="q6g4poLLLm1q5MQJ6_w9ND22bgqftFT6vHVD3mwJpmc" />
     <link rel="shortcut icon" type="image/png" href="./favicon.webp">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
