--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!---->
 	<script defer src="./js/jquery-3.6.0.min.js"></script>
  	<script defer src="./js/bootstrap.min.js"></script>
- 	<script defer src="./js/blocs.js"></script>
+ 	<script defer src="./js/blocs.min.js"></script>
  	<script defer src="./js/jquery.touchSwipe.js"></script>
  	<script defer src="./js/gmaps.js"></script>
 	
