--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
 	
 	<script defer src="./js/jquery-3.6.0.min.js"></script>
 	<script defer src="./js/bootstrap.min.js"></script>
-	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
 	
