--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html"> Nous Contacter </a>
+						<a href="contact.html"> Nous Contacter </a>
 					</li>
 				</ul>
 			</div>
